<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="hu.bme.aut.amorg.hf.moneyspentcounter.DetailsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="26sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spent_money_on_week"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/tvSpentMoneyOnWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/icons"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spent_money_in_month"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/tvSpentMoneyInMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/icons"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_phone_number"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/etBankPhoneNumber"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_money_in_month"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/etYourMoneyInMonth"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_many_money_you_can_spend_in_month"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/tvYouCanSpend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:textColor="@color/icons"/>

</LinearLayout>
