<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_bought_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="hu.bme.aut.amorg.hf.moneyspentcounter.CreateBoughtItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_editor"
                android:textSize="26sp"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bought_item_name_hint"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/etItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/bought_item_price_hint"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/etBuyingPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_name_hint"
                android:layout_marginBottom="12dp"/>

            <DatePicker
                android:id="@+id/dpBuyingDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:calendarViewShown="false"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"/>

</RelativeLayout>
